modifications to readMe